tambah tanya ai

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
               class="text-gray-500 hover:text-primary font-medium"
               >Kontak</a
             >
+            <a
+              href="https://chatgpt.com"
+              class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+            >
+              Tanya AI
+            </a>
           </div>
         </div>
       </div>
@@ -85,6 +91,12 @@
             class="block px-3 py-2 text-gray-500 hover:text-primary font-medium"
             >Kontak</a
           >
+          <a
+            href="https://chatgpt.com"
+            class="block px-3 py-2 text-gray-500 hover:text-primary font-medium"
+          >
+            Tanya AI
+          </a>
         </div>
       </div>
     </nav>
